--- a/practice.html
+++ b/practice.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/ios-filled/50/fff/portfolio.png"
+      type="image/x-icon"
+    />
     <title>Raven Portfolio</title>
   </head>
   <body>
@@ -37,7 +42,6 @@
       </div>
 
       <div id="about" class="aboutme">
-        <!-- About Me section content -->
         <span>About Me</span>
         <h3>Education</h3>
 
@@ -63,199 +67,81 @@
           </div>
         </div>
         <h3>Skills</h3>
-        <div class="svg-container">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-          >
-            <g fill="#ff840c" fill-rule="nonzero">
-              <g transform="scale(8.53333,8.53333)">
-                <path
-                  d="M15,3c-6.627,0 -12,5.373 -12,12c0,5.623 3.872,10.328 9.092,11.63c-0.056,-0.162 -0.092,-0.35 -0.092,-0.583v-2.051c-0.487,0 -1.303,0 -1.508,0c-0.821,0 -1.551,-0.353 -1.905,-1.009c-0.393,-0.729 -0.461,-1.844 -1.435,-2.526c-0.289,-0.227 -0.069,-0.486 0.264,-0.451c0.615,0.174 1.125,0.596 1.605,1.222c0.478,0.627 0.703,0.769 1.596,0.769c0.433,0 1.081,-0.025 1.691,-0.121c0.328,-0.833 0.895,-1.6 1.588,-1.962c-3.996,-0.411 -5.903,-2.399 -5.903,-5.098c0,-1.162 0.495,-2.286 1.336,-3.233c-0.276,-0.94 -0.623,-2.857 0.106,-3.587c1.798,0 2.885,1.166 3.146,1.481c0.896,-0.307 1.88,-0.481 2.914,-0.481c1.036,0 2.024,0.174 2.922,0.483c0.258,-0.313 1.346,-1.483 3.148,-1.483c0.732,0.731 0.381,2.656 0.102,3.594c0.836,0.945 1.328,2.066 1.328,3.226c0,2.697 -1.904,4.684 -5.894,5.097c1.098,0.573 1.899,2.183 1.899,3.396v2.734c0,0.104 -0.023,0.179 -0.035,0.268c4.676,-1.639 8.035,-6.079 8.035,-11.315c0,-6.627 -5.373,-12 -12,-12z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-          >
-            <g
-              fill="#ff840c"
-              fill-rule="nonzero"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <g transform="scale(5.12,5.12)">
-                <path
-                  d="M26.707,3.293l-21,21c-0.391,0.391 -0.391,1.024 0,1.414l5.586,5.586c0.391,0.391 1.024,0.391 1.414,0l26.586,-26.586c0.63,-0.63 0.184,-1.707 -0.707,-1.707h-11.172c-0.265,0 -0.519,0.105 -0.707,0.293zM39.293,24.707l-17.293,17.293l-6.293,-6.293c-0.391,-0.391 -0.391,-1.024 0,-1.414l11,-11c0.188,-0.188 0.442,-0.293 0.707,-0.293h11.172c0.891,0 1.337,1.077 0.707,1.707zM39.293,45.293l-7.293,-7.293l-10,4l4.707,4.707c0.188,0.188 0.442,0.293 0.707,0.293h11.172c0.891,0 1.337,-1.077 0.707,-1.707z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-          >
-            <g
-              fill="#ff840c"
-              fill-rule="nonzero"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <g transform="scale(5.12,5.12)">
-                <path
-                  d="M9,7l3,34l14,4l14,-4c1,-11.333 2,-22.667 3,-34zM11.18359,9h29.63281l-2.6875,30.45508l-12.12891,3.46484l-12.12891,-3.46484zM18.55078,15l-0.96094,12h12.99023l-0.41016,5l-4.16992,0.61914l-4.11914,-0.61914l-0.18164,-2h-3.85937l0.39063,5l7.75977,2l7.76953,-2l0.99023,-12h-12.66016l0.32031,-4h8.35938l0.23047,2h3.69922l-0.69922,-6z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-            style="fill: #fab005"
-          >
-            <g
-              fill="#ff840c"
-              fill-rule="evenodd"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <g transform="scale(5.12,5.12)">
-                <path
-                  d="M39,40l-14,4l-14,-4l-3,-34h34c-1,11.33203 -2,22.66797 -3,34zM39.81641,8h-29.63281l2.6875,30.45313l12.12891,3.46875l12.12891,-3.46875zM16.80078,28h4l0.09766,2.5l4.10156,1.39844l4.10156,-1.39844l0.29688,-4.5h-8.79687l-0.20312,-4h9.20313l0.29688,-4h-13.79687l-0.30078,-4h18.30078l-0.5,8l-0.70312,11.5l-7.89844,2.60156l-7.89844,-2.60156z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-            style="fill: #fab005"
-          >
-            <g
-              fill="#ff840c"
-              fill-rule="nonzero"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <g transform="scale(5.12,5.12)">
-                <path
-                  d="M25,12c-6.49219,0 -12.37891,1.35938 -16.72656,3.62891c-4.34766,2.26953 -7.27344,5.53906 -7.27344,9.37109c0,3.83203 2.92578,7.10156 7.27344,9.37109c4.34766,2.26953 10.23437,3.62891 16.72656,3.62891c6.49219,0 12.37891,-1.35937 16.72656,-3.62891c4.34766,-2.26953 7.27344,-5.53906 7.27344,-9.37109c0,-3.83203 -2.92578,-7.10156 -7.27344,-9.37109c-4.34766,-2.26953 -10.23437,-3.62891 -16.72656,-3.62891zM25,14c6.21094,0 11.82422,1.32422 15.80078,3.40234c3.97656,2.07422 6.19922,4.80078 6.19922,7.59766c0,2.79688 -2.22266,5.52344 -6.19922,7.59766c-3.97656,2.07813 -9.58984,3.40234 -15.80078,3.40234c-6.21094,0 -11.82422,-1.32422 -15.80078,-3.40234c-3.97656,-2.07422 -6.19922,-4.80078 -6.19922,-7.59766c0,-2.79687 2.22266,-5.52344 6.19922,-7.59766c3.97656,-2.07812 9.58984,-3.40234 15.80078,-3.40234zM22.50781,16l-2.50781,12h2.625l1.26563,-6h2.09766c0.66797,0 1.11328,0.10938 1.32031,0.33203c0.20313,0.22266 0.24609,0.64453 0.12891,1.25l-0.95703,4.41797h2.66406l1.03906,-4.77734c0.22266,-1.14453 0.05469,-1.98437 -0.5,-2.49609c-0.56641,-0.51953 -1.5625,-0.72656 -3.04687,-0.72656h-2.33984l0.83203,-4zM11,20l-2.02734,11h2.64453l0.52734,-3h1.64844c3.44531,0 5.32031,-0.79687 6.01953,-3.75391c0.60156,-2.54297 -0.9375,-4.24609 -3.48047,-4.24609zM32,20l-2.02734,11h2.64453l0.52734,-3h1.64844c3.44531,0 5.32031,-0.79687 6.01953,-3.75391c0.60156,-2.54297 -0.9375,-4.24609 -3.48047,-4.24609zM13.27344,22h2.05859c1.71094,0 2.07031,0.76953 1.98047,1.625c-0.23047,2.20703 -1.60547,2.375 -3.08203,2.375h-1.71484zM34.27344,22h2.05859c1.71094,0 2.07031,0.76953 1.98047,1.625c-0.23047,2.20703 -1.60547,2.375 -3.08203,2.375h-1.71484z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0,0,256,256"
-            style="fill: #fab005"
-          >
-            <g
-              fill="#ff840c"
-              fill-rule="nonzero"
-              stroke="none"
-              stroke-width="1"
-              stroke-linecap="butt"
-              stroke-linejoin="miter"
-              stroke-miterlimit="10"
-              stroke-dasharray=""
-              stroke-dashoffset="0"
-              font-family="none"
-              font-weight="none"
-              font-size="none"
-              text-anchor="none"
-              style="mix-blend-mode: normal"
-            >
-              <g transform="scale(5.12,5.12)">
-                <path
-                  d="M6,4c-1.09306,0 -2,0.90694 -2,2v38c0,1.09306 0.90694,2 2,2h38c1.09306,0 2,-0.90694 2,-2v-38c0,-1.09306 -0.90694,-2 -2,-2zM6,6h38v38h-38zM18.58594,14c-1.44,0 -2.59198,0.16002 -3.58398,0.41602l-0.00195,21.58398h2.46484v-9.16992c0.352,0.031 0.67189,0.03125 1.08789,0.03125c1.92,0 3.93589,-0.79844 5.08789,-2.39844c0.833,-1.088 1.31055,-2.43202 1.31055,-4.41602c0,-1.887 -0.54341,-3.45647 -1.56641,-4.48047c-1.12,-1.088 -2.81583,-1.56641 -4.79883,-1.56641zM18.97656,15.64063c2.751,0 3.64648,1.98145 3.64648,4.18945c0,3.04 -1.63225,4.64063 -4.03125,4.64063c-0.416,0 -0.70419,-0.0315 -0.99219,-0.0625v-8.60742c0.32,-0.097 0.80095,-0.16016 1.37695,-0.16016zM31.7168,20c-2.491,0 -4.41602,1.76864 -4.41602,4.30664c0,1.767 1.12675,3.11659 3.21875,4.43359c1.626,1.028 2.05664,1.86373 2.05664,3.05273c0,1.381 -0.92747,2.24805 -2.35547,2.24805c-1.03,0 -2.02584,-0.44973 -2.58984,-0.80273l-0.63086,1.86133c0.697,0.546 1.9923,0.90039 3.1543,0.90039c2.656,0 4.8457,-1.50995 4.8457,-4.62695c0,-2.152 -1.45941,-3.59886 -3.31641,-4.75586c-1.594,-1.027 -1.99219,-1.63802 -1.99219,-2.66602c0,-1.027 0.69564,-1.99023 2.05664,-1.99023c0.863,0 1.5282,0.28903 2.1582,0.70703l0.66406,-1.86523c-0.664,-0.417 -1.59152,-0.80273 -2.85352,-0.80273z"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <object data="assets/fi-xnsuxl-linux.svg" type="image/svg+xml">
-            Your browser doesn't support SVG
-          </object>
-          <object data="assets/fi-xnluxl-database.svg" type="image/svg+xml">
-            Your browser doesn't support SVG
-          </object>
-          <object data="assets/fi-cnluxl-bootstrap-b.svg" type="image/svg+xml">
-            Your browser doesn't support SVG
-          </object>
+        <div class="logo-container">
+          <img src="assets/htmllogo.png" alt="htmllogo" />
+          <img src="assets/csslogo.png" alt="csslogo" />
+          <img src="assets/bootstraplogo.png" alt="bootstraplogo.png" />
+          <img src="assets/phplogo.png" alt="phplogo" />
+          <img src="assets/sqllogo.png" alt="sqllogo" />
+          <img src="assets/githublogo.png" alt="githublogo" />
+          <img src="assets/linuxlogo.png" alt="linuxlogo" />
+          <img src="assets/figmalogo.png" alt="figmalogo" />
+          <img src="assets/pslogo.png" alt="pslogo" />
+          <img src="assets/flutterlogo.png" alt="flutterlogo" />
         </div>
       </div>
 
       <div id="works" class="portfolio">
-        <!-- Works section content -->
+        <span>Recent Works</span>
+        <div class="works">
+          <div class="content">
+            <h3>Public Health Disease Geomapping</h3>
+            <p>
+              Public Health Disease Geomapping website is a detailed online
+              resource made to offer engaging and educational representations of
+              disease data on maps of Cavite. For information on the geographic
+              distribution of diseases and their effects on various locations,
+              public health authorities, researchers, and the general public can
+              all benefit from visiting our website.
+            </p>
+            <div class="redirects">
+              <h3>Tools</h3>
+              <div class="tools">
+                <!-- php logo -->
+                <img src="assets/phplogo.png" alt="phplogo" />
+                <img src="assets/sqllogo.png" alt="sqllogo" />
+                <img src="assets/bootstraplogo.png" alt="bootstraplogo.png" />
+              </div>
+              <h3>Links</h3>
+              <div class="links">
+                <a href="https://github.com">Github </a>
+              </div>
+            </div>
+          </div>
+          <img src="assets/public.jpeg" alt="geohealth" />
+        </div>
+        <div class="works">
+          <img class="todoapp" src="assets/todoapp.png" alt="geohealth" />
+          <div class="content">
+            <h3>Simple Todo List</h3>
+            <p>
+              The to-do list application, inspired by the functionality of
+              Google Tasks, represents a user-friendly and efficient task
+              management solution. Developed using Flutter, it leverages the
+              Provider package for robust state management, ensuring seamless
+              user interactions and data handling. With a design influenced by
+              Google Tasks, the application offers a clean and intuitive
+              interface for users to create, edit, and organize tasks
+              effortlessly.
+            </p>
+            <div class="redirects">
+              <h3>Tools</h3>
+              <div class="tools">
+                <!-- php logo -->
+                <img src="assets/flutterlogo.png" alt="flutterlogo.png" />
+                <img src="assets/firebaselogo.png" alt="firebaselogo.png" />
+              </div>
+              <h3>Links</h3>
+              <div class="links">
+                <a href="https://github.com"> github </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div id="contact" class="contact">
-        <!-- Contact section content -->
+        <span>Let's Connect</span>
       </div>
     </div>
   </body>
