--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               </div>
               <h3>Link</h3>
               <div class="links">
-                <a href="https://github.com">Github </a>
+                <a href="https://github.com/nevarwin/admin2gh">Github </a>
               </div>
             </div>
           </div>
@@ -136,7 +136,9 @@
               </div>
               <h3>Link</h3>
               <div class="links">
-                <a href="https://github.com"> Github </a>
+                <a href="https://github.com/nevarwin/Todo-List-Project">
+                  Github
+                </a>
               </div>
             </div>
           </div>
