added internship details

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           </div>
           <div class="checkpoint">
             <div>
-              <h2>Looking for internship</h2>
+              <h2>Intership</h2>
+              <p>Present</p>
+              <p>CXI Services Inc.</p>
             </div>
           </div>
         </div>
