--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </div>
           <div class="checkpoint">
             <div>
-              <h2>Intership</h2>
-              <p>Present</p>
+              <h2>Internship</h2>
+              <p>September 28 - January 3</p>
               <p>CXI Services Inc.</p>
             </div>
           </div>
