updated logo and added picture

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
-      href="https://img.icons8.com/ios-filled/50/fff/portfolio.png"
+      href="https://icons8.com/icon/111593/portfolio"
       type="image/x-icon"
     />
     <title>Raven Portfolio</title>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="photo">
-          <!-- <img src="photo1.png" alt="" /> -->
+          <img src="./assets/profile.png" alt="profile" />
         </div>
       </div>
 
@@ -67,7 +67,7 @@
           <div class="checkpoint">
             <div>
               <h2>Internship</h2>
-              <p>September 28 - January 3</p>
+              <p>September 2023 - January 2024</p>
               <p>CXI Services Inc.</p>
             </div>
           </div>
@@ -76,6 +76,7 @@
         <div class="logo-container">
           <img src="assets/htmllogo.png" alt="htmllogo" />
           <img src="assets/csslogo.png" alt="csslogo" />
+          <img src="assets/jslogo.png" alt="jslogo" />
           <img src="assets/bootstraplogo.png" alt="bootstraplogo.png" />
           <img src="assets/phplogo.png" alt="phplogo" />
           <img src="assets/sqllogo.png" alt="sqllogo" />
@@ -84,6 +85,7 @@
           <img src="assets/figmalogo.png" alt="figmalogo" />
           <img src="assets/pslogo.png" alt="pslogo" />
           <img src="assets/flutterlogo.png" alt="flutterlogo" />
+          <img src="assets/laravellogo.png" alt="laravellogo" />
         </div>
       </div>
 
