replace the tab icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
-      href="https://icons8.com/icon/111593/portfolio"
+      href="https://img.icons8.com/color/48/portfolio.png"
       type="image/x-icon"
     />
     <title>Raven Portfolio</title>
@@ -170,7 +170,7 @@
           </div>
 
           <form
-            action="https://formsubmit.co/e9d10e6bde83b726ec4623d85b1511f6"
+            action="https://formsubmit.co/ravencsolis@gmail.com"
             method="POST"
           >
             <label for="name">Name</label>
@@ -185,6 +185,8 @@
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="5" required></textarea>
 
+            <!-- Honeypot -->
+            <input type="text" name="_honey" style="display: none" />
             <button type="submit">Submit</button>
           </form>
         </div>
