updated socials and added resume

--- a/index.html
+++ b/index.html
@@ -160,12 +160,24 @@
               <h3>ravencsolis@gmail.com</h3>
             </div>
             <div class="pair">
-              <img src="Facebook.png" alt="facebook" />
-              <h3>facebook.com/Nevarwin</h3>
+              <img src="LinkedIn.png" alt="linkedin" />
+              <a href="https://www.linkedin.com/in/ravencsolis/">
+                <h3>linkedin.com/in/ravencsolis/</h3>
+              </a>
             </div>
             <div class="pair">
               <img src="GitHub.png" alt="github" />
-              <h3>github.com/nevarwin</h3>
+              <a href="https://github.com/nevarwin">
+                <h3>github.com/nevarwin</h3>
+              </a>
+            </div>
+            <div class="pair">
+              <img src="resume.png" alt="updated resume" />
+              <a
+                href="https://drive.google.com/file/d/14triLcRqesp-5898NJRpfiVXHNEhTDcs/view?usp=sharing"
+              >
+                <h3>Download CV</h3>
+              </a>
             </div>
           </div>
 
