--- a/index.html
+++ b/index.html
@@ -47,28 +47,48 @@
 
       <div id="about" class="aboutme">
         <span>About Me</span>
-        <h3>Education</h3>
+        <h3>Experience</h3>
 
         <div class="timeline">
           <div class="checkpoint">
             <div>
-              <h2>TVL ICT - Major in Computer Programming</h2>
-              <p>Class 2019</p>
-              <p>Rosario Institute</p>
-            </div>
-          </div>
-          <div class="checkpoint">
-            <div>
               <h2>BS Information Technology</h2>
-              <p>Present</p>
               <p>Cavite State University CCAT Campus</p>
             </div>
           </div>
           <div class="checkpoint">
             <div>
               <h2>Internship</h2>
-              <p>September 2023 - January 2024</p>
               <p>CXI Services Inc.</p>
+            </div>
+          </div>
+          <div class="checkpoint">
+            <div>
+              <h2>Junior Software Developer</h2>
+              <p>June 2024 – May 2025</p>
+              <p>PHILCENTRO TECHNOLOGIES INC.</p>
+              <p>
+                Implemented CRUD operation API, contributing to a key feature of
+                the application. Utilized Postman and AWS CloudWatch to perform
+                thorough testing, debugging, and troubleshooting, optimizing API
+                performance and reliability. Integrated API with frontend using
+                Next.js to deliver dynamic, user-friendly web experiences.
+              </p>
+            </div>
+          </div>
+          <div class="checkpoint">
+            <div>
+              <h2>iOS Developer</h2>
+              <p>May 2025 – Present</p>
+              <p>XTREME OFFSHORE OUTSOURCING</p>
+              <p>
+                Developed and maintained new features for 5 different iOS apps
+                using Objective-C and Swift then UIKit/SwiftUI. Used Xcode's debugging tools to
+                identify and resolve bugs, ensuring application stability and
+                performance. Managed app distribution and internal testing
+                cycles by deploying builds using Test Flight for debugging and
+                stakeholder feedback.
+              </p>
             </div>
           </div>
         </div>
@@ -91,6 +111,37 @@
 
       <div id="works" class="portfolio">
         <span>Recent Works</span>
+        <div class="works">
+          <div class="content">
+            <h3>Expense Tracker</h3>
+            <p>
+              A native iOS application designed for efficient personal finance
+              management. Built using Objective-C and Core Data, it features
+              strict budget allocation, category-based transaction tracking, and
+              monthly installment monitoring.
+            </p>
+            <div class="redirects">
+              <h3>Tools</h3>
+              <div class="tools">
+                <img
+                  src="https://img.icons8.com/color/48/objective-c.png"
+                  alt="objective-c"
+                />
+                <img
+                  src="https://img.icons8.com/color/48/xcode.png"
+                  alt="xcode"
+                />
+              </div>
+              <h3>Link</h3>
+              <div class="links">
+                <a href="https://github.com/nevarwin/ExpenseTrackerObjC"
+                  >Github
+                </a>
+              </div>
+            </div>
+          </div>
+          <img src="assets/expense_tracker.png" alt="Expense Tracker" />
+        </div>
         <div class="works">
           <div class="content">
             <h3>Public Health Disease Geomapping</h3>
