feat: Refactor homepage layout, navigation, and contact form styling while condensing content descriptions.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
           </div>
         </div>
 
-        <div class="photo">
-          <img src="./assets/profile.png" alt="profile" />
-        </div>
+
       </div>
 
       <div id="about" class="aboutme">
@@ -68,11 +66,7 @@
               <p>June 2024 – May 2025</p>
               <p>PHILCENTRO TECHNOLOGIES INC.</p>
               <p>
-                Implemented CRUD operation API, contributing to a key feature of
-                the application. Utilized Postman and AWS CloudWatch to perform
-                thorough testing, debugging, and troubleshooting, optimizing API
-                performance and reliability. Integrated API with frontend using
-                Next.js to deliver dynamic, user-friendly web experiences.
+                Built core API features with CRUD functionality. Optimized API performance using Postman and AWS CloudWatch for troubleshooting and debugging. Integrated backend services with Next.js to deliver dynamic, high-performance web experiences.
               </p>
             </div>
           </div>
@@ -82,12 +76,7 @@
               <p>May 2025 – Present</p>
               <p>XTREME OFFSHORE OUTSOURCING</p>
               <p>
-                Developed and maintained new features for 5 different iOS apps
-                using Objective-C and Swift then UIKit/SwiftUI. Used Xcode's debugging tools to
-                identify and resolve bugs, ensuring application stability and
-                performance. Managed app distribution and internal testing
-                cycles by deploying builds using Test Flight for debugging and
-                stakeholder feedback.
+                Developed features for 5 iOS apps using Swift, Objective-C, UIKit, and SwiftUI. Ensured app stability through rigorous debugging with Xcode tools. Managed TestFlight deployments for internal testing and stakeholder reviews.
               </p>
             </div>
           </div>
@@ -115,10 +104,7 @@
           <div class="content">
             <h3>Expense Tracker</h3>
             <p>
-              A native iOS application designed for efficient personal finance
-              management. Built using Objective-C and Core Data, it features
-              strict budget allocation, category-based transaction tracking, and
-              monthly installment monitoring.
+              A native iOS finance manager built with Objective-C and Core Data. Features strict budgeting, category tracking, and monthly installment monitoring for complete financial control.
             </p>
             <div class="redirects">
               <h3>Tools</h3>
@@ -146,12 +132,7 @@
           <div class="content">
             <h3>Public Health Disease Geomapping</h3>
             <p>
-              Public Health Disease Geomapping website is a detailed online
-              resource made to offer engaging and educational representations of
-              disease data on maps of Cavite. For information on the geographic
-              distribution of diseases and their effects on various locations,
-              public health authorities, researchers, and the general public can
-              all benefit from visiting our website.
+              An interactive web platform visualizing disease data across Cavite. Provides public health officials with vital insights into disease distribution and geographic patterns.
             </p>
             <div class="redirects">
               <h3>Tools</h3>
@@ -173,14 +154,7 @@
           <div class="content">
             <h3>Simple Todo List</h3>
             <p>
-              The to-do list application, inspired by the functionality of
-              Google Tasks, represents a user-friendly and efficient task
-              management solution. Developed using Flutter, it leverages the
-              Provider package for robust state management, ensuring seamless
-              user interactions and data handling. With a design influenced by
-              Google Tasks, the application offers a clean and intuitive
-              interface for users to create, edit, and organize tasks
-              effortlessly.
+              A clean task manager inspired by Google Tasks. Built with Flutter and Provider for robust state management, offering a seamless and intuitive user experience.
             </p>
             <div class="redirects">
               <h3>Tools</h3>
@@ -236,17 +210,25 @@
             action="https://formsubmit.co/ravencsolis@gmail.com"
             method="POST"
           >
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required />
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" required />
+            </div>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required />
+            </div>
 
-            <label for="subject">Subject</label>
-            <input type="text" id="subject" name="subject" required />
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="text" id="subject" name="subject" required />
+            </div>
 
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
 
             <!-- Honeypot -->
             <input type="text" name="_honey" style="display: none" />
