feat: Implement SEO enhancements by adding sitemap, robots.txt, and extensive meta tags, alongside semantic HTML and content updates.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,40 @@
       href="https://img.icons8.com/color/48/portfolio.png"
       type="image/x-icon"
     />
-    <title>Raven Portfolio</title>
+    <title>Raven Solis | Software Developer & iOS Engineer</title>
+    <meta name="description" content="Raven Solis is a Software Developer specializing in iOS and Web Development. Explore my portfolio of mobile apps, web platforms, and creative coding projects." />
+    <meta name="keywords" content="Raven Solis, Software Developer, iOS Developer, Web Developer, Swift, SwiftUI, Objective-C, Next.js, Portfolio" />
+    <meta name="author" content="Raven Solis" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nevarwin.github.io/Raven-Portfolio/" />
+    <meta property="og:title" content="Raven Solis | Software Developer & iOS Engineer" />
+    <meta property="og:description" content="Raven Solis is a Software Developer specializing in iOS and Web Development. Explore my portfolio of mobile apps, web platforms, and creative coding projects." />
+    <meta property="og:image" content="https://nevarwin.github.io/Raven-Portfolio/assets/preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://nevarwin.github.io/Raven-Portfolio/" />
+    <meta property="twitter:title" content="Raven Solis | Software Developer & iOS Engineer" />
+    <meta property="twitter:description" content="Raven Solis is a Software Developer specializing in iOS and Web Development. Explore my portfolio of mobile apps, web platforms, and creative coding projects." />
+    <meta property="twitter:image" content="https://nevarwin.github.io/Raven-Portfolio/assets/preview.png" />
+
+    <link rel="canonical" href="https://nevarwin.github.io/Raven-Portfolio/" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Raven Solis",
+      "url": "https://nevarwin.github.io/Raven-Portfolio/",
+      "jobTitle": "Software Developer",
+      "sameAs": [
+        "https://www.linkedin.com/in/ravencsolis/",
+        "https://github.com/nevarwin"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div class="body-container">
@@ -28,8 +61,8 @@
       <div id="home">
         <!-- Home section content -->
         <div class="title">
-          <h4>SOFTWARE DEVELOPER</h4>
-          <p>Raven<br />Solis</p>
+          <h2>SOFTWARE DEVELOPER</h2>
+          <h1>Raven<br />Solis</h1>
           <h3>
             Welcome to my digital hub!, a software developer on a mission to
             create functional and elegant solutions through code.
@@ -51,13 +84,8 @@
           <div class="checkpoint">
             <div>
               <h2>BS Information Technology</h2>
-              <p>Cavite State University CCAT Campus</p>
-            </div>
-          </div>
-          <div class="checkpoint">
-            <div>
-              <h2>Internship</h2>
-              <p>CXI Services Inc.</p>
+              <p>2024</p>
+              <p>Cavite State University - CCAT Campus</p>
             </div>
           </div>
           <div class="checkpoint">
@@ -83,18 +111,18 @@
         </div>
         <h3>Skills</h3>
         <div class="logo-container">
-          <img src="assets/htmllogo.png" alt="htmllogo" />
-          <img src="assets/csslogo.png" alt="csslogo" />
-          <img src="assets/jslogo.png" alt="jslogo" />
-          <img src="assets/bootstraplogo.png" alt="bootstraplogo.png" />
-          <img src="assets/phplogo.png" alt="phplogo" />
-          <img src="assets/sqllogo.png" alt="sqllogo" />
-          <img src="assets/githublogo.png" alt="githublogo" />
-          <img src="assets/linuxlogo.png" alt="linuxlogo" />
-          <img src="assets/figmalogo.png" alt="figmalogo" />
-          <img src="assets/pslogo.png" alt="pslogo" />
-          <img src="assets/flutterlogo.png" alt="flutterlogo" />
-          <img src="assets/laravellogo.png" alt="laravellogo" />
+          <img src="assets/htmllogo.png" alt="HTML5 Logo" />
+          <img src="assets/csslogo.png" alt="CSS3 Logo" />
+          <img src="assets/jslogo.png" alt="JavaScript Logo" />
+          <img src="assets/bootstraplogo.png" alt="Bootstrap Logo" />
+          <img src="assets/phplogo.png" alt="PHP Logo" />
+          <img src="assets/sqllogo.png" alt="SQL Logo" />
+          <img src="assets/githublogo.png" alt="GitHub Logo" />
+          <img src="assets/linuxlogo.png" alt="Linux Logo" />
+          <img src="assets/figmalogo.png" alt="Figma Logo" />
+          <img src="assets/pslogo.png" alt="Photoshop Logo" />
+          <img src="assets/flutterlogo.png" alt="Flutter Logo" />
+          <img src="assets/laravellogo.png" alt="Laravel Logo" />
         </div>
       </div>
 
