feat: Revamp hero section content and styling with updated titles, description, and new call-to-action links.

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
       <div id="home">
         <!-- Home section content -->
         <div class="title">
-          <h2>SOFTWARE DEVELOPER</h2>
-          <h1>Raven<br />Solis</h1>
+          <h2>IOS & WEB ENGINEER</h2>
+          <h1>Raven</h1>
           <h3>
-            Welcome to my digital hub!, a software developer on a mission to
-            create functional and elegant solutions through code.
+            Building high-performance native mobile apps and dynamic web platforms with clean code and modern design.
           </h3>
 
           <div class="getintouch">
-            <a href="#contact">Let's get in touch!</a>
+            <a href="#works" class="filled">View My Work</a>
+            <a href="https://drive.google.com/file/d/14triLcRqesp-5898NJRpfiVXHNEhTDcs/view?usp=sharing">Download CV</a>
           </div>
         </div>
 
